Added CORS support for http://localhost:8080 in SecurityConfig